--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   <meta property="og:url" content="https://beanhull0357-bot.github.io/ai-market/" />
   <meta property="og:site_name" content="JSONMart" />
 
+  <!-- Content Security Policy -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co wss://*.supabase.co; img-src 'self' data: https:; frame-ancestors 'none';" />
+
   <!-- Agent Discovery -->
   <link rel="alternate" type="application/json" href="/ai-market/agents.json" title="Agent Capabilities" />
   <link rel="alternate" type="application/json" href="/ai-market/.well-known/acp-manifest.json" title="ACP Manifest" />
-
-  <!-- Google Merchant Center Verification (replace with actual value) -->
-  <meta name="google-site-verification" content="GOOGLE_MERCHANT_VERIFICATION_CODE" />
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
